--- a/BlogProject/templates/blog/post_list_api.html
+++ b/BlogProject/templates/blog/post_list_api.html
@@ -1,39 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Test – Blog Posts</title>
 </head>
-
 <body>
-    <h1>blog posts</h1>
-    <ol id="post-wrapper">
 
-        <!-- <li>
-            <a href="" ><h2> - </h2></a>
-        </li> -->
+<h1>Simulate accessing API from frontend</h1>
+<h3>Blog posts</h3>
 
-    </ol>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        $.get('/blog/api/v1/post/',  // url
-            function (data, textStatus, jqXHR) { 
-                wrapper = $('#post-wrapper');
-                for (post of data.results){
-                    wrapper.append(`<li><a href="${post.absolute_url}"><h2>${post.title}</h2></a></li>`)
-                }
-                
-                // alert('status: ' + textStatus + ', data:' + data);
-                // console.log(data);
+<ol id="post-wrapper"></ol>
 
-            });
-    </script>
+<div style="margin-top:20px;">
+    <button id="prev-btn" disabled>⬅ Previous</button>
+    <button id="next-btn">Next ➡</button>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    let currentUrl = '/api/v1/blog/post/';
+
+    function loadPosts(url) {
+        $.get(url, function (data) {
+            const wrapper = $('#post-wrapper');
+            wrapper.empty(); // پاک کردن لیست قبلی
+
+            for (const post of data.results) {
+                wrapper.append(`
+                    <li>
+                        <a href="${post.absolute_url}" target="_blank">
+                            <strong>${post.title}</strong>
+                        </a>
+                        <br>
+                        <small>
+                            Category: ${post.category.name} |
+                            Author: ${post.author}
+                        </small>
+                    </li>
+                `);
+            }
+
+            // مدیریت pagination
+            currentUrl = url;
+            $('#next-btn').prop('disabled', !data.links.next);
+            $('#prev-btn').prop('disabled', !data.links.previous);
+
+            $('#next-btn').data('url', data.links.next);
+            $('#prev-btn').data('url', data.links.previous);
+        });
+    }
+
+    // رویداد دکمه‌ها
+    $('#next-btn').on('click', function () {
+        const url = $(this).data('url');
+        if (url) loadPosts(url);
+    });
+
+    $('#prev-btn').on('click', function () {
+        const url = $(this).data('url');
+        if (url) loadPosts(url);
+    });
+
+    // بارگذاری اولیه
+    loadPosts(currentUrl);
+</script>
 
 </body>
-
 </html>
